--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask==1.0.2
 Flask-Login==0.4.1
 Flask-Psycopg2==1.3
 Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
 gunicorn==19.9.0
 ItsDangerous==1.0.0
 Jinja2==2.10
@@ -11,3 +12,4 @@ psycopg2==2.7.5
 psycopg2-binary==2.7.5
 SQLAlchemy==1.2.12
 Werkzeug==0.14.1
+WTForms==2.2.1
